add js.socialshareprivacy fanstatic resource to buildout

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -98,6 +98,7 @@ diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.enquete_theme/adhocr
 adhocracy = hg https://bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:branch}]
 # adhocracy.enquete_theme = hg https://bitbucket.org/liqd/adhocracy.enquete_theme 
 adhocracy.wordpressbasic_theme = hg https://bitbucket.org/liqd/adhocracy.wordpressbasic_theme
+js.socialshareprivacy = hg https://bitbucket.org/csenger/js.socialshareprivacy
 
 [ports]
 main = 5001
@@ -272,6 +273,3 @@ programs =
     30 solr ${buildout:directory}/bin/solr-instance [fg]
     40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/adhocracy.ini]
     45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini]
- 
- 
- 
