--- a/versions.cfg
+++ b/versions.cfg
@@ -67,10 +67,11 @@ argparse = 1.2.1
 elementtree = 1.2.6-20050316
 zc.buildout = 1.5.2
 
-#fantastic ressource management
+#fantastic resource management
 fanstatic = 0.11.2
 js.jquery = 1.6.1
 js.jquery-qtip = 1.0.0
+js.socialshareprivacy = 1.3
 
 #nose
 nose = 1.1.2
