make smtp_server configurable via buildout. set it to lostating for staging

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -71,6 +71,7 @@ secret = DGK23234324234019357FFFFFFsecret
 email.from = mail@adhocracy.cc
 #Error emails:
 email.to = 
+smtp_server = localhost
 #Database connection
 sqlalchemy.url = sqlite:///${buildout:directory}/var/development.db
 #sqlalchemy.url = postgres://nutzer:passwort@localhost/20101128 
