--- a/buildout_production_example.cfg
+++ b/buildout_production_example.cfg
@@ -18,7 +18,13 @@ parts +=
 #Override settings from buildout_common.cfg    
 ##############################################################################  
 
+[adhocracy]
+sqlalchemy.url = postgresql://staging_adhocracy:18dubzzzddd__@localhost:5433/staging_adhocracy
+secret = 2999999999999999992333DFFFUEIGFFFFFFFFFFFFFFFFj
+email.from = mail@staging_bundestag.adhocracy.cc
+
 [adhocracy_code]
+repository = https://bitbucket.org/liqd/adhocracy
 branch = default
 repository_theme = ssh://hg@bitbucket.org/liqd/adhocracy.enquete_theme
  
