--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -66,7 +66,7 @@ main = adhocracy.lan
 # proxy (e.g. apache with ReverseProxy, see /etc/vhost.ini.in)
 # on a port != 80
 main.force_port = True
-blog = staging_bundestag_blog.adhocracy.cc
+blog = staticpages.enquetebeteiligung.de
 
 [paster]
 eggs += ZopeSkel
