--- a/buildout_production_example.cfg
+++ b/buildout_production_example.cfg
@@ -1,7 +1,6 @@
 #This buildout is for productive server.
 
 [buildout]
-
 extends = buildout_common.cfg
 parts += 
     solr_download
@@ -13,20 +12,31 @@ parts +=
     memcached_setup
     supervisor
 
-
 ##############################################################################  
 #Override settings from buildout_common.cfg    
 ##############################################################################  
 
+[ports]
+main = 20071
+memcached = 20075
+rabbitmq = 20076
+rabbitmq_nodename = mynode
+solr = 20077
+supervisor = 20079
+
 [adhocracy]
-sqlalchemy.url = postgresql://staging_adhocracy:18dubzzzddd__@localhost:5433/staging_adhocracy
-secret = 2999999999999999992333DFFFUEIGFFFFFFFFFFFFFFFFj
-email.from = mail@staging_bundestag.adhocracy.cc
+#sqlalchemy.url = postgresql://account@localhost:5432/database
+secret = 5a4ed2af889c507c48229d4d882108eea1fc82c5672ed33808e5de5f30
+email.from = mail@adhocracy.lan
 
 [adhocracy_code]
-repository = https://bitbucket.org/liqd/adhocracy
-branch = default
-repository_theme = ssh://hg@bitbucket.org/liqd/adhocracy.enquete_theme
+branch = sprint-new-templates
+revision_nr = tip 
+#add custom theme package
+diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme
+ 
+[sources]
+adhocracy.enquete_theme = hg https://bitbucket.org/liqd/adhocracy.enquete_theme
  
 [domains]
 main = adhocracy.lan
@@ -36,5 +46,3 @@ blog = staticpages.enquetebeteiligung.de
 recipe = collective.recipe.template[genshi]:genshi
 input = ${buildout:directory}/etc/production.ini.in
 output = ${buildout:directory}/etc/adhocracy.ini
-rules = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme/rules.xml
- 
