removed adhocracy.enquete_theme package

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -17,14 +17,16 @@ parts +=
     test
     coveragereport
 
+
 #update repositories when updating the buildout
 always-checkout = false
 
 ##############################################################################  
-# Aditional stuff to make development easy
+# Aditional eggs
 ##############################################################################
  
 eggs +=  
+#ease development
     Babel
     ipython
     ipdb
@@ -52,11 +54,13 @@ debug = True
 
 [adhocracy_code]
 branch = sprint-new-templates
+#add custom theme package
 #diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
 diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme
 
 [sources]
 adhocracy = hg ssh://hg@bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:branch}]
+#add custom theme package
 adhocracy.enquete_theme = hg ssh://hg@bitbucket.org/liqd/adhocracy.enquete_theme
 adhocracy.wordpressbasic_theme = hg ssh://hg@bitbucket.org/liqd/adhocracy.wordpressbasic_theme
 
@@ -66,6 +70,7 @@ main = adhocracy.lan
 # proxy (e.g. apache with ReverseProxy, see /etc/vhost.ini.in)
 # on a port != 80
 main.force_port = True
+#add custom wordpress backend
 blog = staticpages.enquetebeteiligung.de
 
 [paster]
