--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -129,9 +129,9 @@ recipe = collective.recipe.grp
 
 [adhocracy_switch_revision_number]
 recipe = plone.recipe.command
-stop-on-error = false
+stop-on-error = true
 command = 
-    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update -C ${adhocracy_code:revision_nr}
+    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update ${adhocracy_code:revision_nr}
 
 [lxml]
 recipe = z3c.recipe.staticlxml
