--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -153,11 +153,7 @@ initialization =
 # python with all required eggs 
 [adhocpy]   
 recipe = zc.recipe.egg
-eggs = 
-    ${buildout:eggs}
-    nose
-    nose-cov
-    nose-exclude
+eggs =  ${buildout:eggs}
 interpreter = adhocpy
 scripts = adhocpy
 
