--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -2,7 +2,12 @@
 
 [buildout]
 
-extends = buildout_common.cfg
+extends = 
+# we need zope only to make zope.testrecorder run, if you have problems, just delete it
+    http://good-py.appspot.com/release/zope/2.13.10
+    versions.cfg
+    buildout_common.cfg
+
 parts += 
     adhocracy_unthemed_conf
     solr_download
@@ -16,7 +21,8 @@ parts +=
     supervisor
     test
     coveragereport
-
+    instance 
+    testrecorder 
 
 #update repositories when updating the buildout
 always-checkout = false
@@ -27,23 +33,12 @@ always-checkout = false
  
 eggs +=  
 #ease development
+    adhocracy [test]
     Babel
     ipython
     ipdb
     Werkzeug
     WebError
-
-##############################################################################  
-#Generate nose test script
-##############################################################################  
-
-[test]   
-recipe = zc.recipe.egg
-eggs = 
-    ${buildout:eggs}
-    nose
-    nose-cov
-scripts = nosetests=nosetest 
 
 ##############################################################################  
 #Override settings from buildout_common.cfg    
@@ -103,9 +98,14 @@ programs =
     40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/adhocracy.ini]
 #    45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini]
  
+##############################################################################  
+# Testing stuff   
+##############################################################################  
+
 [test]
 recipe = pbp.recipe.noserunner
 eggs = ${buildout:eggs}
+       ipdbplugin
 # -s: Don't capture stdout (any stdout output will be
 #     printed immediately). Necessary to use pdb during test
 # -q: be less verbose
@@ -115,3 +115,21 @@ defaults =
 [coveragereport]
 recipe = zc.recipe.egg
 eggs = createcoverage    
+
+[instance]
+recipe = plone.recipe.zope2instance
+user = test:test
+http-address = 8088
+eggs =
+  zope.testrecorder
+zcml =
+  zope.testrecorder
+
+[testrecorder]
+# start your local adhocracy server 
+# run bin/testrecorder_start to open you browser
+# submit the local adhocracy server url
+# record a use_case/acceptance test run - http://plone.org/documentation/kb/testing/zope-testrecorder
+recipe = plone.recipe.command
+command = echo 'xdg-open "http:localhost:${instance:http-address}/++resource++recorder/index.html"' > bin/testrecorder.sh
+          chmod a+x bin/testrecorder.sh
