--- a/versions.cfg
+++ b/versions.cfg
@@ -73,7 +73,7 @@ js.jquery = 1.6.1
 js.jquery-qtip = 1.0.0
 js.socialshareprivacy = 1.3
 
-#nose
+#nose 
 nose = 1.1.2
 coverage = 3.5
 createcoverage = 1.1
@@ -81,7 +81,9 @@ pbp.recipe.noserunner = 0.2.6
 nose-cov = 1.4
 nose-exclude = 0.1.5
 cov-core = 1.3
- 
+
+#testbrowser
+zope.testbrowser = 4.0.2
 
 #Required by:
 #WebError 0.10.3
@@ -90,12 +92,6 @@ Pygments = 1.4
 #Required by:
 #python-twitter 0.8.2
 simplejson = 2.1.6
-
-#Required by:
-#repoze.who-testutil 1.0
-#repoze.who-friendlyform 1.0.4
-#repoze.who 2.0b1
-zope.interface = 3.6.3
 
 #Required by:
 #iw.recipe.template 0.2
@@ -116,18 +112,13 @@ oauth2 = 1.5.170
 #Required by:
 #zc.buildout 1.5.2
 setuptools = 0.6c12dev-r88846
+distribute = 0.6.19
 
 #Required by:
 #z3c.recipe.staticlxml 0.7.2
 zc.recipe.cmmi = 1.3.4
 
-#Required by:
-#zope.testing 3.10.2
-zope.exceptions = 3.6.1
 
-#Required by:
-#iw.recipe.template 0.2
-zope.testing = 3.10.2
 
 
 #*************************************************************
