--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -70,6 +70,7 @@ email.from = mail@adhocracy.cc
 #Error emails:
 email.to = 
 smtp_server = localhost
+smtp_port = 25
 #Database connection
 sqlalchemy.url = sqlite:///${buildout:directory}/var/development.db
 #sqlalchemy.url = postgres://nutzer:passwort@localhost/20101128 
@@ -160,7 +161,9 @@ scripts = adhocpy
 # unified directory structure of installed eggs
 [omelette]
 recipe = collective.recipe.omelette
-eggs = ${buildout:eggs}
+eggs = 
+   ${buildout:eggs} 
+   supervisor 
 
 # generate the adhocracy config file
 [adhocracy_conf] 
@@ -261,6 +264,7 @@ recipe = collective.recipe.supervisor
 port = 127.0.0.1:${ports:supervisor}
 user = super
 password = Xld)0_+e1
+pp = ${buildout:directory}/parts/omelette/supervisor/pidproxy.py
 programs =
     0 rabbitmq ${buildout:directory}/bin/rabbitmq-server                 
     20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached}] 
