added smtp port option

--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -9,6 +9,7 @@
 # Uncomment and replace with the address which should receive any error reports
 email_to = ${parts.adhocracy['email.to']}
 smtp_server = ${parts.adhocracy['smtp_server']}
+smtp_port = ${parts.adhocracy['smtp_port']}
 error_email_from = ${parts.adhocracy['email.from']} 
 
 [server:main]
