lamson mailserver config to log all send mail

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -7,6 +7,7 @@ extends =
     http://good-py.appspot.com/release/zope/2.13.10
     versions.cfg
     buildout_common.cfg
+    mailserver.cfg
 
 parts += 
     adhocracy_unthemed_conf
@@ -18,6 +19,7 @@ parts +=
     memcached
     memcached_setup
     test
+    omelette
     supervisor
     test
     coveragereport
@@ -46,6 +48,11 @@ eggs +=
 
 [adhocracy]
 debug = True
+smtp_port = 8823
+
+[ports]
+mailserver_port = ${adhocracy:smtp_port}  
+mailserver_logging_port = 8825
 
 [adhocracy_code]
 branch = sprint-new-templates
