--- a/mailserver.cfg
+++ b/mailserver.cfg
@@ -34,7 +34,10 @@ command =
     echo "$ mutt -F muttrc \n"
 
     echo "Stop mailserver and logging server:"
-    echo "$ lamson stop -ALL run \n\n"
+    echo "$ lamson stop -ALL run \n"
+
+    echo "Problems:"
+    echo "Make sure the ports are avialable and the pid files are not locked. /n/n"
 
 update-command = ${mailserver_install:command}
 
