--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -9,6 +9,7 @@ extends = versions.cfg
 versions = versions
 eggs = 
     Spawning
+    psycopg2
     pysqlite
     psycopg2
     lxml == 2.3.3
@@ -20,6 +21,9 @@ eggs =
     BeautifulSoup
     fanstatic
     ipdb
+    geoalchemy
+    geojson
+    shapely
 
 # checkout adhocracy packages to ./src
 auto-checkout = *
