--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -48,6 +48,7 @@ eggs +=
 
 [adhocracy]
 debug = True
+sqlalchemy.url = postgresql://adhocracy:adhoc@localhost:5432/adhocracy
 smtp_port = 8823
 
 [ports]
@@ -55,7 +56,7 @@ mailserver_port = ${adhocracy:smtp_port}
 mailserver_logging_port = 8825
 
 [adhocracy_code]
-branch = sprint-new-templates
+branch = geo
 #add custom theme package
 #diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
 diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme
@@ -100,7 +101,7 @@ output = ${buildout:directory}/etc/unthemed.ini
 [supervisor]
 programs =
     0 rabbitmq ${buildout:directory}/bin/rabbitmq-server                 
-    20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached}] 
+#    20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached}] 
     30 solr ${buildout:directory}/bin/solr-instance [fg]
     40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/adhocracy.ini]
 #    45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini]
