--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -20,6 +20,7 @@ eggs =
     BeautifulSoup
     fanstatic
     ipdb
+    js.jquery_joyride
 
 # checkout adhocracy packages to ./src
 auto-checkout = *
@@ -99,6 +100,7 @@ diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme
 adhocracy = hg https://bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:branch}]
 adhocracy.wordpressbasic_theme = hg https://bitbucket.org/liqd/adhocracy.wordpressbasic_theme
 js.socialshareprivacy = hg https://bitbucket.org/csenger/js.socialshareprivacy
+js.jquery_joyride = hg https://bitbucket.org/csenger/js.jquery_joyride
 
 [ports]
 main = 5001
