load offenekommune theme as default in geo branch

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -59,12 +59,12 @@ mailserver_logging_port = 8825
 branch = geo
 #add custom theme package
 #diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
-diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme
+diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.offenekommune_theme/adhocracy/offenekommune_theme
 
 [sources]
 adhocracy = hg ssh://hg@bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:branch}]
 #add custom theme package
-adhocracy.enquete_theme = hg ssh://hg@bitbucket.org/liqd/adhocracy.enquete_theme
+adhocracy.offenekommune_theme = hg ssh://hg@bitbucket.org/liqd/adhocracy.offenekommune_theme
 adhocracy.wordpressbasic_theme = hg ssh://hg@bitbucket.org/liqd/adhocracy.wordpressbasic_theme
 
 [domains]
@@ -74,7 +74,7 @@ main = adhocracy.lan
 # on a port != 80
 main.force_port = True
 #add custom wordpress backend
-blog = staticpages.enquetebeteiligung.de
+blog = offenekommune.wordpress.liqd.net
 
 [paster]
 eggs += ZopeSkel
