--- a/buildout_testing.cfg
+++ b/buildout_testing.cfg
@@ -9,6 +9,6 @@ extends =
 
 adhocracy = hg https://bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:branch}]
 #add custom theme package
-adhocracy.offenekommune_theme = hg https://bitbucket.org/liqd/adhocracy.offenekommune_theme
+adhocracy.enquete_theme = hg https://bitbucket.org/liqd/adhocracy.enquete_theme
 adhocracy.wordpressbasic_theme = hg https://bitbucket.org/liqd/adhocracy.wordpressbasic_theme
 
