Use HHU mirror for buildout

--- a/buildout_testing.cfg
+++ b/buildout_testing.cfg
@@ -12,3 +12,7 @@ adhocracy = hg https://bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:bra
 adhocracy.enquete_theme = hg https://bitbucket.org/liqd/adhocracy.enquete_theme
 adhocracy.wordpressbasic_theme = hg https://bitbucket.org/liqd/adhocracy.wordpressbasic_theme
 
+# One of the suites is bound to not be available, so use our mirror
+[buildout]
+index = http://adhocracy-buildout.cs.uni-duesseldorf.de/
+
