remove revision_nr.
tip is the newest commit ever. We want the newest commit on the current branch.

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -93,7 +93,6 @@ consumer_secret =
 
 [adhocracy_code]
 branch =  default
-revision_nr = tip
 diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
 
 [sources]
@@ -134,14 +133,14 @@ recipe = collective.recipe.grp
 recipe = plone.recipe.command
 stop-on-error = true
 command = 
-    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update ${adhocracy_code:revision_nr}
+    [ -f src/adhocracy/setup.py ] && cd src/adhocracy && hg pull && hg update
 
 [lxml]
 recipe = z3c.recipe.staticlxml
 egg = lxml
 libxslt-url = ftp://xmlsoft.org/libxslt/libxslt-1.1.26.tar.gz
 libxml2-url = ftp://xmlsoft.org/libxslt/libxml2-2.7.8.tar.gz
- 
+
 #install paster to set up adhocracy
 [paster]
 recipe = zc.recipe.egg
