Use default branch and improve quoting

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -55,7 +55,7 @@ mailserver_port = ${adhocracy:smtp_port}
 mailserver_logging_port = 8825
 
 [adhocracy_code]
-branch = sprint-new-templates
+branch = default
 #add custom theme package
 #diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
 diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme
