--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -100,7 +100,7 @@ output = ${buildout:directory}/etc/unthemed.ini
 [supervisor]
 programs =
     0 rabbitmq ${buildout:directory}/bin/rabbitmq-server                 
-    20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached}] 
+    20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached} -u nobody]
     30 solr ${buildout:directory}/bin/solr-instance [fg]
     40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/adhocracy.ini]
 #    45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini]
