use different mirror URL

--- a/buildout_testing.cfg
+++ b/buildout_testing.cfg
@@ -14,5 +14,6 @@ adhocracy.wordpressbasic_theme = hg https://bitbucket.org/liqd/adhocracy.wordpre
 
 # One of the suites is bound to not be available, so use our mirror
 [buildout]
-index = http://adhocracy-buildout.cs.uni-duesseldorf.de/
+index = http://adhocracy-buildout.cs.uni-duesseldorf.de/eggproxy/
+
 
