--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -80,6 +80,7 @@ suppress_http_headers = accept-encoding
 use = egg:adhocracy
 full_stack = true
 static_files = true
+adhocracy.translations = adhocracy.offenekommune_theme
 
 cache_dir = ${parts.buildout.directory}/var/data
 beaker.session.key = adhocracy_state
