change default branch to default and default_theme to adhocracy

--- a/buildout_production_example.cfg
+++ b/buildout_production_example.cfg
@@ -30,17 +30,17 @@ secret = 5a4ed2af889c507c48229d4d882108eea1fc82c5672ed33808e5de5f30
 email.from = mail@adhocracy.lan
 
 [adhocracy_code]
-branch = sprint-new-templates
+branch = default
 revision_nr = tip 
 #add custom theme package
-diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme
+diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.adhocracy_theme/adhocracy/adhocracy_theme
  
 [sources]
-adhocracy.enquete_theme = hg https://bitbucket.org/liqd/adhocracy.enquete_theme
+adhocracy.adhocracy_theme = hg https://bitbucket.org/liqd/adhocracy.adhocracy_theme
  
 [domains]
 main = adhocracy.lan
-blog = staticpages.enquetebeteiligung.de
+blog = adhocracystaticpages.liqd.net
 
 [adhocracy_conf] 
 recipe = collective.recipe.template[genshi]:genshi
