--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -55,15 +55,15 @@ mailserver_port = ${adhocracy:smtp_port}
 mailserver_logging_port = 8825
 
 [adhocracy_code]
-branch = sprint-new-templates
+branch = default
 #add custom theme package
 #diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
-diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.enquete_theme/adhocracy/enquete_theme
+diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.adhocracy_theme/adhocracy/adhocracy_theme
 
 [sources]
 adhocracy = hg ssh://hg@bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:branch}]
 #add custom theme package
-adhocracy.enquete_theme = hg ssh://hg@bitbucket.org/liqd/adhocracy.enquete_theme
+adhocracy.adhocracy_theme = hg ssh://hg@bitbucket.org/liqd/adhocracy.adhocracy_theme
 adhocracy.wordpressbasic_theme = hg ssh://hg@bitbucket.org/liqd/adhocracy.wordpressbasic_theme
 
 [domains]
@@ -73,7 +73,8 @@ main = adhocracy.lan
 # on a port != 80
 main.force_port = True
 #add custom wordpress backend
-blog = staticpages.enquetebeteiligung.de
+blog = adhocracystaticpages.liqd.net
+
 
 [paster]
 eggs += ZopeSkel
