--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -61,10 +61,11 @@ branch = default
 diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.adhocracy_theme/adhocracy/adhocracy_theme
 
 [sources]
-adhocracy = hg ssh://hg@bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:branch}]
+# change to `hg ssh://hg@bitbucket.org` urls to pull via ssh
+adhocracy = hg https://bitbucket.org/liqd/adhocracy [branch=${adhocracy_code:branch}]
 #add custom theme package
-adhocracy.adhocracy_theme = hg ssh://hg@bitbucket.org/liqd/adhocracy.adhocracy_theme
-adhocracy.wordpressbasic_theme = hg ssh://hg@bitbucket.org/liqd/adhocracy.wordpressbasic_theme
+adhocracy.adhocracy_theme = hg https://bitbucket.org/liqd/adhocracy.adhocracy_theme
+adhocracy.wordpressbasic_theme = hg https://bitbucket.org/liqd/adhocracy.wordpressbasic_theme
 
 [domains]
 main = adhocracy.lan
