--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -40,6 +40,8 @@ parts =
     vhost_conf
     supervisor
 
+index = http://adhocracy-buildout.cs.uni-duesseldorf.de/eggproxy/
+
 ##############################################################################  
 # System Settings
 ##############################################################################  
