add missing theme egg to buildout_development in geo branch

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -41,6 +41,7 @@ eggs +=
     ipdb
     Werkzeug
     WebError
+    adhocracy.offenekommune_theme
 
 ##############################################################################  
 #Override settings from buildout_common.cfg    
