--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -190,6 +190,7 @@ piwik.id =
 
 # activate geo features
 adhocracy.proposal_geotags = True
+adhocracy.show_overview_map_on_index = True
 
 # Logging configuration
 [loggers]
