buildout_development.cfg: Set always-checkout
This seems to be the most sensible option for test users, automated testing, and new developers.
Experienced developers who may not want to automatically update their repositories(@csenger) can simply override this in their personal buildout preferences.

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -26,8 +26,8 @@ parts +=
     instance 
     testrecorder 
 
-#update repositories when updating the buildout
-always-checkout = false
+# Pull und update each package to get the newest versions
+always-checkout = true
 
 ##############################################################################  
 # Aditional eggs
