--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -252,6 +252,75 @@ content =
         ;;
     esac
 
+[readline]
+recipe = zc.recipe.cmmi
+url = http://ftp.gnu.org/gnu/readline/readline-6.2.tar.gz
+configure-options =
+    --prefix=${buildout:directory}
+
+[postgresql]
+recipe = hexagonit.recipe.cmmi
+url = http://ftp.postgresql.org/pub/source/v9.1.3/postgresql-9.1.3.tar.bz2
+configure-options =
+    --prefix=${buildout:directory}
+    --with-readline
+    --enable-thread-safety
+    --with-libs=${buildout:directory}/lib
+    --with-includes=${buildout:directory}/include
+make-targets = install-world
+
+#[pgsql-symlinks]
+#recipe = cns.recipe.symlink
+#symlink_target = ${buildout:directory}/bin
+#symlink_base = ${postgresql:location}/bin
+#symlink =
+  #clusterdb
+  #createuser
+  #dropuser
+  #pg_config
+  #pg_dump
+  #pg_restore
+  #psql
+  #createdb
+  #dropdb
+  #ecpg
+  #pg_controldata
+  #pg_dumpall
+  #postgres
+  #reindexdb
+  #createlang
+  #droplang
+  #initdb
+  #pg_ctl
+  #pg_resetxlog
+  #postmaster
+  #vacuumdb
+
+[proj]
+recipe = zc.recipe.cmmi
+url = http://download.osgeo.org/proj/proj-4.8.0.tar.gz
+configure-options =
+    --prefix=${buildout:directory}
+
+[geos]
+recipe = zc.recipe.cmmi
+url = http://download.osgeo.org/geos/geos-3.3.3.tar.bz2
+configure-options =
+    --prefix=${buildout:directory}
+
+  
+[postgis]
+recipe = zc.recipe.cmmi
+url = http://postgis.refractions.net/download/postgis-2.0.0.tar.gz
+keep-compile-dir = true
+configure-options =
+    --prefix=${buildout:directory}
+extra_options =
+    --with-pgconfig=${buildout:directory}/bin/pg_config
+    --with-geosconfig=${buildout:directory}/bin/geos-config
+    --with-projdir=${buildout:directory}
+
+
 ##############################################################################  
 # Set up apache2 vhost
 ##############################################################################
@@ -272,7 +341,8 @@ user = super
 password = Xld)0_+e1
 pp = ${buildout:directory}/parts/omelette/supervisor/pidproxy.py
 programs =
-    0 rabbitmq ${buildout:directory}/bin/rabbitmq-server                 
+    0 postgresql ${buildout:directory}/bin/postgres [-D ${buildout:directory}/var/postgresql/data]
+    10 rabbitmq ${buildout:directory}/bin/rabbitmq-server                 
     20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached}] 
     30 solr ${buildout:directory}/bin/solr-instance [fg]
     40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/adhocracy.ini]
