--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -25,6 +25,12 @@ parts +=
     coveragereport
     instance 
     testrecorder 
+    readline
+    geos
+    proj
+    postgresql
+    postgis
+#    pgsql-symlinks
 
 #update repositories when updating the buildout
 always-checkout = false
@@ -103,7 +109,8 @@ output = ${buildout:directory}/etc/unthemed.ini
 
 [supervisor]
 programs =
-    0 rabbitmq ${buildout:directory}/bin/rabbitmq-server                 
+    0 postgresql ${buildout:directory}/bin/postgres [-D ${buildout:directory}/var/postgresql/data -d 5]
+    10 rabbitmq ${buildout:directory}/bin/rabbitmq-server                 
 #    20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached}] 
     30 solr ${buildout:directory}/bin/solr-instance [fg]
     40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/adhocracy.ini]
