add ncurses to buildout (provides libtermcap, needed by readline)

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -33,6 +33,13 @@ parts =
     env
     grp
     lxml
+    ncurses
+    readline
+    geos
+    proj
+    postgresql
+    postgis
+#    pgsql-symlinks
     paster
     adhocracy_switch_revision_number
     adhocpy
@@ -251,6 +258,16 @@ content =
         exit 1
         ;;
     esac
+
+[ncurses]
+recipe = hexagonit.recipe.cmmi
+url = ftp://ftp.gnu.org/pub/gnu/ncurses/ncurses-5.9.tar.gz
+md5sum = 8cb9c412e5f2d96bc6f459aa8c6282a1
+configure-options =
+  --prefix=${buildout:directory}
+  --with-shared
+  --without-normal
+  --without-debug
 
 [readline]
 recipe = zc.recipe.cmmi
