Change adhocpy.eggs to Paste + PasteDeploy for scripts
For unknown reasons some of the paste.* modules are not
importable in adhocpy. They are required e.g. to run the
scripts in src/adhocracy/scripts or to build the complete
documentation.

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -22,6 +22,8 @@ eggs =
     fanstatic
     ipdb
     js.jquery_joyride
+    Paste
+    PasteDeploy
 
 # checkout adhocracy packages to ./src
 auto-checkout = *
