Add sphinxbuilder to build docs in /docs
* This adds a command bin/sphinxbuilder to build the documentation
  in /docs.
* hgignore this directory.

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -23,6 +23,7 @@ parts +=
     supervisor
     test
     coveragereport
+    sphinxbuilder
     instance 
     testrecorder 
 
@@ -124,6 +125,12 @@ defaults =
 [coveragereport]
 recipe = zc.recipe.egg
 eggs = createcoverage    
+
+[sphinxbuilder]
+recipe = collective.recipe.sphinxbuilder
+source = ${buildout:directory}/src/adhocracy/docs
+build = ${buildout:directory}/docs
+eggs = ${buildout:eggs}
 
 [instance]
 recipe = plone.recipe.zope2instance
