dev config: test_supervisor for integration tests
Extend buildout_development.cfg to install a second version
of all services (except rabbitmq) for integration tests

* test.ini.in
  * define seperate pathes for cache, session and site data
  * define another rabbitmq queue/exchange
  * set the language to en_US
  * other test config like skip_*
  * use a sqlite database
  * disable diazo theming
* buildout_development.cfg
  * Add several variables to specify ports etc. for testing
  * Add a new config file etc/test.ini.in and use it to generate
    etc/test.ini
  * Add section [test_solr] to istall an extra solr installation
    running on another port
  * Add [test_supervisor] section that starts
    * test_solr on a different port
    * Another memcached on a different port
    * another background process with etc/test.ini
    * rabbitmq. Note that it can only start rabbitmq with the same
      config used for the non test supervisor. This will fail if the
      other rabbitmq is running already, but that won't hurt cause
      etc/test.ini.in uses a different queue so they won't interfere
      each other.
* hgignore etc/test.ini and etc/test.db

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -25,6 +25,10 @@ parts +=
     coveragereport
     instance 
     testrecorder 
+# configs for running automated tests
+    test_supervisor
+    test_solr
+    test_adhocracy_conf
 
 # Pull und update each package to get the newest versions
 always-checkout = true
@@ -42,10 +46,10 @@ eggs +=
     Werkzeug
     WebError
 
+
 ##############################################################################  
 #Override settings from buildout_common.cfg    
 ##############################################################################  
-
 [adhocracy]
 debug = True
 smtp_port = 8823
@@ -75,7 +79,7 @@ main = adhocracy.lan
 main.force_port = True
 #add custom wordpress backend
 blog = adhocracystaticpages.liqd.net
-
+test_main = test.lan
 
 [paster]
 eggs += ZopeSkel
@@ -86,9 +90,13 @@ eggs += ZopeSkel
 
 [ports]
 main_unthemed = 5002
+test_solr = 5011
+test_memcached = 5012
+test_supervisor = 5013
 
 [domains]
 main_unthemed.force_port = True
+test_solr = localhost
  
 [adhocracy_unthemed_conf] 
 recipe = collective.recipe.template[genshi]:genshi
@@ -134,6 +142,7 @@ eggs =
 zcml =
   zope.testrecorder
 
+
 [testrecorder]
 # start your local adhocracy server 
 # run bin/testrecorder_start to open you browser
@@ -142,3 +151,46 @@ zcml =
 recipe = plone.recipe.command
 command = echo 'xdg-open "http:localhost:${instance:http-address}/++resource++recorder/index.html"' > bin/testrecorder.sh
           chmod a+x bin/testrecorder.sh
+
+
+[test_supervisor]
+#
+# Note that it can start rabbitmq with the same
+# config used for the non test supervisor. This will fail if the
+# other rabbitmq is running already, but that won't hurt cause
+# etc/test.ini.in uses a different queue so they won't interfere
+# each other.
+#
+recipe = collective.recipe.supervisor
+port = 127.0.0.1:${ports:test_supervisor}
+user = super
+password = Xld)0_+e1
+pp = ${buildout:directory}/parts/omelette/supervisor/pidproxy.py
+programs =
+    0 rabbitmq ${buildout:directory}/bin/rabbitmq-server                 
+    20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:test_memcached} -U ${ports:test_memcached}] 
+    30 solr ${buildout:directory}/bin/test-solr-instance [fg]
+    40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/test.ini]
+
+
+[test_solr]
+recipe = collective.recipe.solrinstance
+solr-location = ${solr_download:location}
+host = ${domains:test_solr}
+port = ${ports:test_solr}
+max-num-results = 500
+#we use a static config file, there is nothing auto generated...
+schema-template = ${buildout:directory}/src/adhocracy/solr/schema.xml
+unique-key = id
+index =
+    name:id type:string indexed:true stored:true required:true
+filter =
+script = ${buildout:directory}/bin/test-solr-instance
+vardir = ${buildout:directory}/var/test/solr
+logdir = ${buildout:directory}/var/test/solr
+
+
+[test_adhocracy_conf] 
+recipe = collective.recipe.template[genshi]:genshi
+input = ${buildout:directory}/etc/test.ini.in
+output = ${buildout:directory}/etc/test.ini
