--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -55,7 +55,6 @@ main.force_port =
 #The linked html page has to deliver proper xhtml content (<?xml encoding="utf-8"> ..)!!!
 blog = 
 solr = localhost
-rabbitmq = localhost
 
 [paths]
 apache_conf = /etc/apache2
@@ -82,6 +81,8 @@ smtp_port = 25
 sqlalchemy.url = sqlite:///${buildout:directory}/var/development.db
 #sqlalchemy.url = postgres://nutzer:passwort@localhost/20101128 
 #Site name for all instances, part of the html <title>, notification E-Mails etc
+queue = adhocracy.queue
+
 site.name = Adhocracy
 language = de_DE
 
@@ -108,15 +109,14 @@ js.jquery_joyride = hg https://bitbucket.org/csenger/js.jquery_joyride
 
 [ports]
 main = 5001
-memcached = 5005 
-#WARNING rabbitmq also starts epmd (0.0.0.0:4369) and beam.smp on various ports
-rabbitmq =  5006
-rabbitmq_nodename = bunny1
+memcached = 5005                
+redis =  5006
 solr =  5007
 supervisor = 5010
 
 [urls]
-rabbitmq = http://www.rabbitmq.com/releases/rabbitmq-server/v2.5.1/rabbitmq-server-2.5.1.tar.gz
+# if you change the redis url, change the [redis_move] section
+redis = http://redis.googlecode.com/files/redis-2.4.14.tar.gz
 solr = http://apache.lauf-forum.at//lucene/solr/1.4.1/apache-solr-1.4.1.tgz
 #solr = http://www.bitlib.net/mirror/apache.org//lucene/solr/3.2.0/apache-solr-3.2.0.zip 
 libevent = http://www.monkey.org/~provos/libevent-1.4.8-stable.tar.gz
@@ -210,15 +210,21 @@ index =
 filter =
 #    text solr.LowerCaseFilterFactory
 
-[rabbitmq]
-recipe = rod.recipe.rabbitmq
-url = ${urls:rabbitmq}
+[redis]
+# The redis package is weird in that you only run make.
+# There is no configure and make install will _always_ install it to
+# usr/bin or such. Hence, the trickery with this and move_redis
+recipe = hexagonit.recipe.cmmi
+url = ${urls:redis}
+configure-command = echo No configure for redis
+make-options =
+   PREFIX=${buildout:directory}
 
-[rabbitmq_conf]
+[redis_conf] 
 recipe = collective.recipe.template      
-input = ${buildout:directory}/etc/rabbitmq-env.conf.in
-output = ${buildout:directory}/etc/rabbitmq-env.conf
- 
+input = ${buildout:directory}/etc/redis.conf.in
+output = ${buildout:directory}/etc/redis.conf
+
 [libevent]
 recipe = zc.recipe.cmmi
 url = ${urls:libevent}
@@ -273,8 +279,8 @@ user = super
 password = Xld)0_+e1
 pp = ${buildout:directory}/parts/omelette/supervisor/pidproxy.py
 programs =
-    0 rabbitmq ${buildout:directory}/bin/rabbitmq-server                 
+    0 redis ${buildout:directory}/bin/redis-server [${buildout:directory}/etc/redis.conf]
     20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached}] 
     30 solr ${buildout:directory}/bin/solr-instance [fg]
-    40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/adhocracy.ini]
+    40 worker ${buildout:directory}/bin/paster [--plugin=adhocracy worker -c ${buildout:directory}/etc/adhocracy.ini]
     45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini]
