--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -13,8 +13,8 @@ parts +=
     adhocracy_unthemed_conf
     solr_download
     solr
-    rabbitmq 
-    rabbitmq_conf 
+    redis
+    redis_conf
     libevent
     memcached
     memcached_setup
@@ -102,10 +102,10 @@ output = ${buildout:directory}/etc/unthemed.ini
 
 [supervisor]
 programs =
-    0 rabbitmq ${buildout:directory}/bin/rabbitmq-server                 
+    0 redis ${buildout:directory}/bin/redis-server [${buildout:directory}/etc/redis.conf]
     20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached} -u nobody]
     30 solr ${buildout:directory}/bin/solr-instance [fg]
-    40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/adhocracy.ini]
+    40 worker ${buildout:directory}/bin/paster [--plugin=adhocracy worker -c ${buildout:directory}/etc/adhocracy.ini]
 #    45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini]
  
 ##############################################################################  
