Add section to install rq scripts

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -38,6 +38,7 @@ parts =
     adhocpy
     adhocracy_conf
     adhocracy_setup
+    rq_scripts
     omelette
     vhost_conf
     supervisor
@@ -224,6 +225,10 @@ make-options =
 recipe = collective.recipe.template      
 input = ${buildout:directory}/etc/redis.conf.in
 output = ${buildout:directory}/etc/redis.conf
+
+[rq_scripts] 
+recipe = zc.recipe.egg:scripts
+eggs = rq
 
 [libevent]
 recipe = zc.recipe.cmmi
