Tweak redis config
* Rename config key 'adhocracy.redis.name' to 'adhocracy.redis.queue'.
* make redis ip configurable with domains:redis and domains:test_redis.
* Move redis pidfile into ${buildout:directory} in case somebody
  starts redis in daemon mode.

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -56,6 +56,8 @@ main.force_port =
 #The linked html page has to deliver proper xhtml content (<?xml encoding="utf-8"> ..)!!!
 blog = 
 solr = localhost
+# redis needs an ip to bind to
+redis = 127.0.0.1
 
 [paths]
 apache_conf = /etc/apache2
@@ -78,6 +80,7 @@ email.from = mail@adhocracy.cc
 email.to = 
 smtp_server = localhost
 smtp_port = 25
+
 #Database connection
 sqlalchemy.url = sqlite:///${buildout:directory}/var/development.db
 #sqlalchemy.url = postgres://nutzer:passwort@localhost/20101128 
