--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -102,6 +102,7 @@ test_redis = 5014
 [domains]
 main_unthemed.force_port = True
 test_solr = localhost
+test_redis = 127.0.0.1
  
 [adhocracy_unthemed_conf] 
 recipe = collective.recipe.template[genshi]:genshi
