supervisor: move from AUTO to permanent logfiles
* Generate permanent logfiles in ${buildout:directory}/var/log
  and ${buildout:directory}/var/test/log that will be rotated by
  supervisord. They are named after the program, e.g. solr.log,
  not solr-stderr---supervisor-ABCDEF.log and won't be removed on
  shutdown.
* Generate only one log file for stdout and stderr.

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -287,8 +287,8 @@ user = super
 password = Xld)0_+e1
 pp = ${buildout:directory}/parts/omelette/supervisor/pidproxy.py
 programs =
-    0 redis ${buildout:directory}/bin/redis-server [${buildout:directory}/etc/redis.conf]
-    20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached}] 
-    30 solr ${buildout:directory}/bin/solr-instance [fg]
-    40 worker ${buildout:directory}/bin/paster [--plugin=adhocracy worker -c ${buildout:directory}/etc/adhocracy.ini]
-    45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini]
+    0 redis (stdout_logfile=${buildout:directory}/var/test/log/redis.log) ${buildout:directory}/bin/redis-server [${buildout:directory}/etc/redis.conf] true
+    20 memcached (stdout_logfile=${buildout:directory}/var/test/log/memcached.log) ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached}] true
+    30 solr (stdout_logfile=${buildout:directory}/var/test/log/solr.log) ${buildout:directory}/bin/solr-instance [fg] true
+    40 worker (stdout_logfile=${buildout:directory}/var/test/log/worker.log) ${buildout:directory}/bin/paster [--plugin=adhocracy worker -c ${buildout:directory}/etc/adhocracy.ini] true
+    45 adhocracy (stdout_logfile=${buildout:directory}/var/test/log/adhocracy.log) ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini] true
