--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -174,15 +174,16 @@ command = echo 'xdg-open "http:localhost:${instance:http-address}/++resource++re
 # each other.
 #
 recipe = collective.recipe.supervisor
+logfile = ${buildout:directory}/var/test/log/supervisord.log
 port = 127.0.0.1:${ports:test_supervisor}
 user = super
 password = Xld)0_+e1
 pp = ${buildout:directory}/parts/omelette/supervisor/pidproxy.py
 programs =
-    0 redis ${buildout:directory}/bin/redis-server [${buildout:directory}/etc/test.redis.conf]
-    20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:test_memcached} -U ${ports:test_memcached}] 
-    30 solr ${buildout:directory}/bin/test-solr-instance [fg]
-    40 worker ${buildout:directory}/bin/paster [--plugin=adhocracy worker -c ${buildout:directory}/etc/test.ini]
+    0 redis (stdout_logfile=${buildout:directory}/var/test/log/redis.log) ${buildout:directory}/bin/redis-server [${buildout:directory}/etc/test.redis.conf] true
+    20 memcached (stdout_logfile=${buildout:directory}/var/test/log/memcached.log) ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:test_memcached} -U ${ports:test_memcached}] true
+    30 solr (stdout_logfile=${buildout:directory}/var/test/log/solr.log) ${buildout:directory}/bin/test-solr-instance [fg] true
+    40 worker (stdout_logfile=${buildout:directory}/var/test/log/worker.log) ${buildout:directory}/bin/paster [--plugin=adhocracy worker -c ${buildout:directory}/etc/test.ini] true
 
 
 [test_solr]
