Use adhocracy feature-replace-rabbitmq-with-redis branch

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -63,7 +63,7 @@ mailserver_port = ${adhocracy:smtp_port}
 mailserver_logging_port = 8825
 
 [adhocracy_code]
-branch = default
+branch = feature-replace-rabbitmq-with-redis
 #add custom theme package
 #diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
 diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.adhocracy_theme/adhocracy/adhocracy_theme
