cleanup geo stack in buildout. make shapely and postgis actually use local geos version.

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -104,12 +104,12 @@ output = ${buildout:directory}/etc/unthemed.ini
 
 [supervisor]
 programs =
-    0 postgresql ${buildout:directory}/bin/postgres [-D ${buildout:directory}/var/postgresql/data -d 5]
+    0 postgresql (environment=LD_LIBRARY_PATH="${geos:location}/lib:${proj:location}/lib") ${buildout:directory}/bin/postgres [-D ${buildout:directory}/var/postgresql/data]
     10 rabbitmq ${buildout:directory}/bin/rabbitmq-server                 
-#    20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached} -u nobody] 
+    20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached}] 
     30 solr ${buildout:directory}/bin/solr-instance [fg]
     40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/adhocracy.ini]
-#    45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini]
+#    45 adhocracy (environment=LD_LIBRARY_PATH="${geos:location}/lib") ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini]
  
 ##############################################################################  
 # Testing stuff   
