--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -43,6 +43,8 @@ parts =
     postgresql
     postgis
     postgresql-symlinks
+    cython-src
+    cython-install
     shapely
     paster
     adhocracy_switch_revision_number
@@ -348,6 +350,18 @@ extra_options =
     --with-projdir=${proj:location}
     --with-xml2config=${lxml:location}/libxml2/bin/xml2-config
     --without-raster
+
+[cython-src]
+recipe = hexagonit.recipe.download
+url = http://pypi.python.org/packages/source/C/Cython/Cython-0.16.tar.gz
+
+[cython-install]
+recipe = z3c.recipe.egg:setup
+setup = ${cython-src:location}/Cython-0.16
+args =
+    clean
+    build
+    install
 
 #[shapely]
 #recipe = zc.recipe.egg:custom
