stash spatialite stuff, in order to allow testing of the geo branch with sqlite

--- a/versions.cfg
+++ b/versions.cfg
@@ -28,6 +28,7 @@ mr.developer = 1.19
 ore.recipe.fs = 0.3.1
 plone.recipe.command = 1.1
 pysqlite = 2.6.3
+pyspatialite = 3.0.1
 psycopg2 = 2.2.2
 python-memcached = 1.47
 python-openid = 2.2.5
