add custom pysqlite recipe

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -47,6 +47,7 @@ parts =
     cython-src
     cython-install
     shapely
+    pysqlite
     spatialite
     readosm
     spatialite-tools
@@ -389,6 +390,11 @@ update-command =
     cd ${buildout:directory}/src/shapely
     git pull
     pip install .
+
+[pysqlite]
+recipe = zc.recipe.egg:custom
+egg = pysqlite
+undef = SQLITE_OMIT_LOAD_EXTENSION
 
 [freexl]
 recipe = hexagonit.recipe.cmmi
