--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -56,6 +56,8 @@ main.force_port =
 blog = 
 solr = localhost
 rabbitmq = localhost
+#Full path to a twitter profile, e.g. http://twitter.com/#!/liqd_de or soon http://twitter.com/liqd_de
+twitter =
 
 [paths]
 apache_conf = /etc/apache2
