--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -56,8 +56,6 @@ main.force_port =
 blog = 
 solr = localhost
 rabbitmq = localhost
-#Full path to a twitter profile, e.g. http://twitter.com/#!/liqd_de or soon http://twitter.com/liqd_de
-twitter =
 
 [paths]
 apache_conf = /etc/apache2
@@ -93,6 +91,8 @@ key =
 secret = 
 consumer_key = 
 consumer_secret = 
+#Full path to a twitter profile, e.g. http://twitter.com/liqd_de
+profile_url =
  
 ##############################################################################  
 # Versions and ports of all servers
