--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -40,6 +40,7 @@ parts =
     adhocracy_setup
     omelette
     vhost_conf
+    sysv_conf
     supervisor
 
 index = http://adhocracy-buildout.cs.uni-duesseldorf.de/eggproxy/
@@ -263,6 +264,15 @@ content =
 recipe = collective.recipe.template      
 input = ${buildout:directory}/etc/vhost.conf.in
 output = ${buildout:directory}/etc/vhost.conf
+
+##############################################################################  
+# Set up SysV init script
+##############################################################################
+
+[sysv_conf] 
+recipe = collective.recipe.template      
+input = ${buildout:directory}/etc/sysv-init.in
+output = ${buildout:directory}/etc/sysv-init
 
 ##############################################################################  
 # Set up supervisor to run it all
