--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -107,6 +107,13 @@ programs =
     30 solr ${buildout:directory}/bin/solr-instance [fg]
     40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/adhocracy.ini]
 #    45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini]
+
+##############################################################################  
+# Set up SysV init script
+##############################################################################
+
+[sysv_conf]
+user = adhocracy
  
 ##############################################################################  
 # Testing stuff   
