--- a/buildout_production_example.cfg
+++ b/buildout_production_example.cfg
@@ -45,3 +45,10 @@ blog = adhocracystaticpages.liqd.net
 recipe = collective.recipe.template[genshi]:genshi
 input = ${buildout:directory}/etc/production.ini.in
 output = ${buildout:directory}/etc/adhocracy.ini
+
+##############################################################################  
+# Set up SysV init script
+##############################################################################
+
+[sysv_conf]
+user = adhocracy
