pep8 and pyflakes scripts

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -7,6 +7,7 @@ extends =
     http://good-py.appspot.com/release/zope/2.13.10
     versions.cfg
     buildout_common.cfg
+    codecheck.cfg
     mailserver.cfg
 
 parts += 
