add nginx frontend webserver to development buildout

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -19,6 +19,8 @@ parts +=
     libevent
     memcached
     memcached_setup
+    nginx
+    nginx-conf
     omelette
     supervisor
     test
@@ -54,6 +56,7 @@ smtp_port = 8823
 [ports]
 mailserver_port = ${adhocracy:smtp_port}  
 mailserver_logging_port = 8825
+nginx = 5008
 
 [adhocracy_code]
 branch = default
@@ -97,6 +100,25 @@ input = ${buildout:directory}/etc/unthemed.ini.in
 output = ${buildout:directory}/etc/unthemed.ini
 
 ##############################################################################  
+#Nginx
+##############################################################################  
+
+[nginx]
+recipe = zc.recipe.cmmi
+url = http://nginx.org/download/nginx-1.2.2.tar.gz
+extra_options =
+    --conf-path=${buildout:directory}/etc/nginx/nginx.conf
+    --error-log-path=${buildout:directory}/var/log/nginx-error.log
+    --http-log-path=${buildout:directory}/var/log/nginx-access.log
+    --pid-path=${buildout:directory}/var/run/nginx.pid
+    --lock-path=${buildout:directory}/var/lock/nginx.lock
+
+[nginx-conf]
+recipe = collective.recipe.template
+input = ${buildout:directory}/etc/nginx/nginx.conf.in
+output = ${buildout:directory}/etc/nginx/nginx.conf
+
+##############################################################################  
 # Set up supervisor to run it all
 ##############################################################################
 
@@ -107,6 +129,7 @@ programs =
     30 solr ${buildout:directory}/bin/solr-instance [fg]
     40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/adhocracy.ini]
 #    45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini]
+    50 nginx ${nginx:location}/sbin/nginx [ -c ${buildout:directory}/etc/nginx/nginx.conf ]
 
 ##############################################################################  
 # Set up SysV init script
